# quran-ebook

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  quran_hafs_kfgqpc_bilin_ar-en-sahih_converted.kepub.epub  quran_hafs_kfgqpc_bilin_ar-no-berg_converted.kepub.epub  quran_hafs_kfgqpc_interactive_ar-en-sahih_converted.kepub.epub  quran_hafs_kfgqpc_interactive_ar-no-berg_converted.kepub.epub  variants.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
configs/: arabic_hafs.yaml  arabic_uthmani_amiri.yaml  bilingual_en_haleem.yaml  bilingual_en_sahih.yaml  interactive_en_sahih.yaml
configs-experimental/: hafs_plain.yaml  hafs_tajweed.yaml  hafs_tajweed_bilingual_en.yaml  hafs_tajweed_interactive_en.yaml
configs-experimental/arabic/: hafs_qcf1.yaml  hafs_qcf4.yaml  hafs_qcf4_fixed.yaml
configs-experimental/bilingual/: en_sahih_qcf1.yaml  en_sahih_qcf4.yaml  ur_jalandhari_nastaleeq.yaml
configs/arabic/: hafs_inline.yaml  (+1 more)
scripts/: gen_release_body.py  package_release.py  populate_native_names.py
test/: quran_hafs_kfgqpc_wbw_ar-en-khattab-fn.epub
tests/: quran_hafs_indopak_indopak_interactive_ar-ur-jalandhari.epub  quran_hafs_kfgqpc_inline_ar.epub  quran_hafs_kfgqpc_wbw_ar-en-khattab-fn.epub  quran_warsh_kfgqpc_inline_ar.epub  quran_warsh_kfgqpc_inline_ar_imgtest.epub  test_qcf_fatiha.epub
tools/: INSTALL.txt  README.md  build_dictionary.py  build_grammar_dictionary.py  build_surah_overview.py  build_tafseer_dictionary.py  extract_clear_quran.py  make_test_epub.py  make_test_fatiha.py
(+326 files in other folders)
